welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:23: error: Unit does not take parameters
		for (i<-1 to 4) faireV()
                                      ^